[project]
name = "pdf-invoke"
version = "0.1.1"
description = "A LLM utility for working with pdfs"
authors = [
    {name = "Luciano Bermudez",email = "lberm007@ucr.edu"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "langchain-core (>=1.2.11,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pymupdf (>=1.27.1,<2.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "langchain (>=1.2.10,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "langchain-openai (>=1.1.9,<2.0.0)"
]
